--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "devDependencies": {
     "@tsconfig/node10": "^1.0.7",
     "@types/screeps": "^3.2.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "eslint": "^7.18.0",
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ./src/*",
+    "fix": "eslint ./src/* --fix"
   },
   "keywords": [],
   "author": "",
