--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
 {
-  "name": "private",
-  "version": "1.0.0",
-  "main": "index.js",
   "devDependencies": {
-    "@tsconfig/node10": "^1.0.7",
-    "@types/screeps": "^3.2.1",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "eslint": "^7.18.0",
-    "typescript": "^4.1.3"
-  },
-  "scripts": {
-    "lint": "eslint ./src/*",
-    "fix": "eslint ./src/* --fix"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "@types/lodash": "^4.14.191",
+    "@types/screeps": "^3.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "typescript": "^4.9.5"
+  }
 }
